--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(profile.png);"></div>
-				<h1 id="colorlib-logo"><a href="index.html"> Ahnaf Rizan</a></h1>
-				<span class="position">Software Engineer in sri lanka</span>
+				<h1 id="colorlib-logo"><a href="index.html"> Mohamed Ahnaf</a></h1>
+				
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -92,7 +92,7 @@
 								<div class="col-md-12">
 									<div class="about-desc">
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Ahnaf Rizan</strong>  from Beruwala, Sri Lanka. I hold a degree in Software Engineering from Kingston University, London. I am currently employed as a freelance full stack developer on the Fiverr platform, where I work with clients on strategic design and development projects. I am passionate about developing eye catching web applications using React Js, and I am proficient in HTML, CSS, JS, PHP and SQL database and I have experience working with WordPress and am proficient in creating web applications using the Elementor page builder. Currently, I am actively expanding my skills and strong interest in learning new technologies.</p>
+										<p><strong>Hi I'm Mohamed Ahnaf</strong>  from Beruwala, Sri Lanka. I hold a degree in Software Engineering from Kingston University, London. I am currently employed as a freelance full stack developer on the Fiverr platform, where I work with clients on strategic design and development projects. I am passionate about developing eye catching web applications using React Js, and I am proficient in HTML, CSS, JS, PHP and SQL database and I have experience working with WordPress and am proficient in creating web applications using the Elementor page builder. Currently, I am actively expanding my skills and strong interest in learning new technologies.</p>
 									</div>
 									<!-- <p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p> -->
 								</div>
